2005-02-01  Rodrigo Moya <rodrigo@novell.com>

	* gui/e-cal-menu.c (e_cal_menu_target_new_select):
	* gui/e-cal-popup.c (e_cal_popup_target_new_select): add correct mask
	for detached recurrences.

2005-02-01  Rodrigo Moya <rodrigo@novell.com>

	* gui/calendar-commands.c
	(calendar_control_sensitize_calendar_commands): only add real data
	to the array.

2005-02-01  JP Rosevear  <jpr@novell.com>

	Fixes #71944
	
	* gui/e-tasks.c: declare config_categories_changed_cb before its
	used

2005-01-31  Hans Petter Jansson  <hpj@novell.com>

	* common/Makefile.am (libevolution_calendarprivate_la_LDFLAGS):
	Remove the -module flag, this isn't supposed to be a module.

2005-01-31  Hans Petter Jansson  <hpj@novell.com>

	* idl/evolution-calendar.idl: Remove definition of CalObjUID and
	include that from Evolution-DataServer-Calendar.idl instead. This
	prevents the typecode from being defined twice.

2005-01-31  Hans Petter Jansson  <hpj@novell.com>

	* gui/e-cal-config.c (_ECalConfigPrivate): Use guint instead of ulong
	for signal ID.

2005-01-31  Priit Laes <amd@tt.ee>

	Fixes #61078

	* gui/dialogs/task-page.glade: use consistent style for markup.

2005-01-31  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #64682
	* gui/e-calendar-view.c: (transfer_item_to): Added an 
	X property to identify if the appointment is moved from 
	another calendar.

2005-01-28  JP Rosevear  <jpr@novell.com>

	Fixes #71452
	
	* gui/dialogs/comp-editor.c (setup_widgets): listen for
	delete_event signal and handle it outside of the response signal
	so that cancel works properly

2005-01-28  Rodrigo Moya <rodrigo@novell.com>

	* gui/e-tasks.c (setup_widgets):
	* gui/gnome-cal.c (setup_widgets): use correct key name.

2005-01-28  Rodrigo Moya <rodrigo@novell.com>

	Fixes #33078

	* gui/gnome-cal.c: deal now with categories entirely here, no more
	"categories_changed" signal from the backends.
	(free_categories, add_categories, append_category_cb,