@@ -1,3 +1,9 @@
+2005-02-01  JP Rosevear  <jpr@novell.com>
+
+	* gui/e-tasks.c (e_tasks_destroy): fix typo
+
+	* gui/gnome-cal.c (gnome_calendar_destroy): ditto
+	
 2005-02-01  Rodrigo Moya <rodrigo@novell.com>
 
 	* gui/e-cal-menu.c (e_cal_menu_target_new_select):
